# mochi

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  render.yaml  start.sh  tray.py
backend/: api.lisp  concept-api.lisp  course-api.lisp  gamification.lisp  import-api.lisp  migration.lisp  models.lisp  ontology-query.lisp  ontology-store.lisp  ontology.lisp  package.lisp  protocol.lisp  pyproject.toml  run.lisp  seed-data.lisp  server.lisp  storage.lisp  study-plan.asd  term.lisp
backend/app/: config.py  gamification.py  main.py  models.py  seed.py  store.py
backend/app/routers/: chat_images.py  courses.py  import_.py  llm.py  memory.py  notes.py  pet.py  progress.py  srs.py  ws.py
backend/app/services/: llm.py  llm_anthropic.py  note_normalize.py  ollama_ocr.py  pet_art.py  pet_stats.py
backend/data/: aliases.json  chat.json  courses.json  notes.json  pet.json  progress.json  srs.json  tutor_notes.json
backend/data/ocr/: 1706.03762v7_p0001.md  1706.03762v7_p0002.md  1706.03762v7_p0003.md  1706.03762v7_p0004.md  1706.03762v7_p0005.md  1706.03762v7_p0006.md  1706.03762v7_p0007.md  1706.03762v7_p0008.md  1706.03762v7_p0009.md  1706.03762v7_p0010.md  1706.03762v7_p0011.md  1706.03762v7_p0012.md  1706.03762v7_p0013.md  C_2015_Real_Mathematical_Analysis_p0001.md  (+1413 more)
backend/scripts/: connect_qualitative_phase.py  dedup_and_finalize.py  normalize_note_domains.py  normalize_note_ids_and_links.py
backend/test/: gamification-test.lisp  migration-test.lisp  ontology-query-test.lisp  ontology-store-test.lisp  overlay-test.lisp  storage-test.lisp  suite.lisp
(+112 files in other folders)
