[project]
name = "study-plan-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "websockets>=14.0",
    "python-multipart>=0.0.18",
    "anthropic-oauth[anthropic]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
anthropic-oauth = { git = "https://github.com/izzortsi/anthropic-oauth" }
